# onedrive-sharepoint-python-sdk

./: LICENSE.txt  README.md  pyproject.toml
.github/workflows/: test.yaml  upload.yaml
examples/: README.md  auth.py
examples/onedrive/: basics.py  error_handling.py
examples/sharepoint/: basics.py  error_handling.py  find_drive_id.py
src/msdrive/: __init__.py  constants.py  drive.py  onedrive.py  sharepoint.py
tests/: test_drive.py  test_exceptions.py  test_onedrive.py  test_sharepoint.py  upload_test.txt
