[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "onedrive-sharepoint-python-sdk"
description = "A Python SDK for accessing files in OneDrive & SharePoint using the Microsoft Graph API"
version = "0.0.1"
readme = "README.md"
requires-python = ">=3.7"
keywords = ["onedrive", "sharepoint", "microsoft"]
license = {text = "BSD 3-Clause License"}
classifiers = [
    "Programming Language :: Python :: 3",
]
dependencies = [
    "requests",
]

[project.optional-dependencies]
tests = [
    "pytest",
    "requests-mock",
]