[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "onedrive-sharepoint-python-sdk"
description = "A Python SDK for accessing files in OneDrive & SharePoint using the Microsoft Graph API"
version = "0.0.1"
readme = "README.md"
requires-python = ">=3.7"
keywords = ["onedrive", "sharepoint", "microsoft"]
license = {file = "LICENSE.txt"}
authors = [
    { name="Jason M", email="emailfire@gmail.com" },
]
classifiers = [
    "Programming Language :: Python :: 3.7",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "License :: OSI Approved :: MIT License",
]
dependencies = [
    "requests",
]

[project.urls]
"Homepage" = "https://github.com/fire015/onedrive-sharepoint-python-sdk"
"Bug Tracker" = "https://github.com/fire015/onedrive-sharepoint-python-sdk/issues"

[project.optional-dependencies]
tests = [
    "pytest",
    "requests-mock",
]